Fix specs table layout to prevent label wrapping and improve column spacing

--- a/assets/product-intelligence.css
+++ b/assets/product-intelligence.css
@@ -542,13 +542,13 @@
 }
 
 .specs-table__label {
-  width: 80px;
   color: #A0AEC0;
   font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  padding-right: 16px;
+  white-space: nowrap;
+  padding-right: 32px;
 }
 
 .specs-table__value {
@@ -557,12 +557,15 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+}
+
+.specs-table__value:nth-child(2) {
   text-align: right;
-  padding-right: 32px;
+  padding-right: 48px;
 }
 
 .specs-table__value:last-child {
-  padding-right: 0;
+  text-align: right;
 }
 
 /* Download Section */
